# RegScan

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.web  README.md  docker-compose.prod.yml  docker-compose.yml  project_setting.md  pyproject.toml
.claude/: settings.local.json
analysis/meetings/: 260123.md
analysis/research/: 260126_perplexity_research.md  (+3 more)
data/: briefing_sample.html  regscan.db  report_test.db  step_test.db  test_storage.db
docs/: README.md  architecture.md  article-pipeline.md  data-sources.md  deployment-checklist.md  overview.md  pipeline.md  project_setting.md  roadmap.md  schema.md  status.md  uiux-improvement-plan.md  unmatched_ingredient_report.md
docs/proposal/: custom.scss  dashboard_mockup.html  detail_mockup.html  gcp_cloud_run_spec.md  gcp_instance_spec.md  pyproject.toml  regscan_server_proposal.html  regscan_server_proposal.qmd  regscan_server_proposal.tex  report_mockup.html  setup.ps1
output/: sample_briefing_biweekly.md  sample_briefing_weekly.md  v12_vs_v20_comparison.md  v3_briefing_test_report_2026-03-30.md  v4_drug_samples.json
regscan/: __init__.py  scheduler.py
scripts/: build_timeline_dataset.py  capture_screenshot.py  cleanup_low_score.py  collect_ema.py  collect_mfds_full.py  compare_models.py  compare_v41_models.py  download_hira_yakga.py  generate_briefing_reports.py  generate_daily_html.py  generate_full_report.py  generate_full_report_with_fda.py  generate_html_briefings.py  generate_sample_briefing.py  generate_sample_briefings.py  measure_data_volume.py  migrate_v2.py  patch_json_metadata.py  patch_regulatory_events.py  refresh_mfds_dump.py  render_v2_briefing.py  run_daily_scan.py  scrape_seladelpar_articles.py  test_api.py  test_atc.py  test_briefing.py  test_briefing_quality.py  test_db_storage.py  test_domestic_impact.py  test_e2e_pipeline.py  test_ema_feedcard.py  test_full_integration.py  test_global_status.py  test_ingredient_bridge.py  test_mfds_cris.py  test_mfds_integration.py  test_mfds_matching.py  test_report.py  validate_decomposer_vocab.py
tests/: conftest.py  test_ai_pipeline.py  test_change_detection.py  test_decomposer.py  test_decomposer_snapshot.py  test_e2e_openai.py  test_fda.py  test_hira.py  test_ingest_kdca.py  test_ingest_khidi.py  test_korea_relevance.py  test_models.py  test_stream_external.py  test_stream_innovation.py  test_stream_therapeutic.py  test_v2_pipeline.py  test_v2_quality.py  test_v2_schema.py  test_v3_briefing.py
worklog/: README.md
(+938 files in other folders)
