[project]
name = "regscan-proposal"
version = "0.1.0"
description = "RegScan proposal presentation"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "nbformat>=5.9.0",
    "nbclient>=0.9.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "tabulate>=0.9.0",
]

[tool.uv]
dev-dependencies = []
